MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Teams_KPI__c/Sales_Executive_Teams_KPI__c.object-meta.xml
<CustomObject>
    <description>This object is used to capture the KPIs of the Sales Executive Teams</description>
    <label>Sales Executive Teams KPI</label>
    <nameField>
        <displayFormat>SEKPI-{0}</displayFormat>
        <label>Sales Executive KPI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Executive Teams KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>