MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Teams_KPI__c/fields/Presentable__c.field-meta.xml
<CustomField>
    <fullName>Presentable__c</fullName>
    <label>Presentable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>