MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Teams_KPI__c/fields/Punctuality__c.field-meta.xml
<CustomField>
    <fullName>Punctuality__c</fullName>
    <label>Punctuality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>