MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Teams_KPI__c/fields/Sales_Executive__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to lookup the record with the Sales Executive User.</description>
    <label>Sales Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Executive_Teams_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>