MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Teams_KPI__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>