MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Teams_KPI__c/fields/Team_Work__c.field-meta.xml
<CustomField>
    <fullName>Team_Work__c</fullName>
    <label>Team Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>