MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Teams_KPI__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>