MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Teams_KPI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Executive__c</columns>
    <columns>Presentable__c</columns>
    <columns>Punctuality__c</columns>
    <columns>Team_Work__c</columns>
    <columns>Target__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>